Bug 648299 -moz-text-decoration-style: -moz-none doesn't work r=dbaron